fix layout bug when removing the first item

--- a/src/main/less/main.less
+++ b/src/main/less/main.less
@@ -320,6 +320,7 @@ button.delete-btn:not(.confirm) {
 
 .preference-list-item {
   height: 120px;
+  width: 100%;
   padding: 20px 0px 20px 20px;
   transition: background-color 1000ms;
 
